preparing for prod

--- a/faultquakes/templates/faultquakes/research.html
+++ b/faultquakes/templates/faultquakes/research.html
@@ -9,13 +9,9 @@
         <div class="container col-md-4">
 
             <h4><h4><a href="{% url 'geodesy' %}">Geodesy</a></h4></h4>
-            <p class="article-content">Geodesy also known as geodetics, is the earth science of accurately measuring and
-                understanding three of Earth's fundamental properties: its geometric shape, orientation in space,
-                and gravitational field. The field also incorporates studies of how these properties change over
+            <p class="article-content">Geodesy also known as geodetics, is the earth science of accurately measuring and understanding three of Earth's fundamental properties: its geometric shape, orientation in space, and gravitational field. The field also incorporates studies of how these properties change over
                 time and equivalent measurements for other planets (known as planetary geodesy).
-                Geodynamical phenomena include crustal motion, tides, and polar motion, which can be studied by
-                designing global and national control networks, applying space and terrestrial techniques, and
-                relying on datums and coordinate systems...</p><a href="{% url 'geodesy' %}">read more about geodesy...</a>
+                Geodynamical phenomena include ...</p><a href="{% url 'geodesy' %}">read more about geodesy...</a>
 
         </div>
 
