--- a/faultquakes/templates/faultquakes/home.html
+++ b/faultquakes/templates/faultquakes/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-
+<div class="container">
     <div class="jumbotron p-3 p-md-5 text-black rounded bg-white">
         <div class="col-md-6 px-0">
             <h1 class="display-6 font-italic" >
@@ -22,7 +22,7 @@
         </div>
     </div>
     <h3><strong class="d-inline-block mb-2 text-primary"><a href="{% url 'news' %}">News</a></strong></h3>
-    <div class="row mb-2">
+    <div class="row mb-2 news">
         {% for news in news %}
             <div class="col-md-4  card-deck mb-3 ">
                 <div class="card">
@@ -55,7 +55,7 @@
     {% endfor %}
     </div>
     <h3><strong class="d-inline-block mb-2 text-primary"><a href="{% url 'publications' %}">Publications</a></strong></h3>
-    <div class="row mb-2">
+    <div class="row mb-2 publications">
         {% for post in post|slice:"2" %}
             <div class="col-md-6  card-deck mb-3 ">
                 <div class="card">
@@ -71,7 +71,7 @@
             </div>
         {% endfor %}
     </div>
-    <div class="row mb-2">
+    <div class="row mb-2 publications">
         {% for post in post %}
             {% if forloop.counter == 3 %}
                 <div class="col-md-4  card-deck mb-3 ">
@@ -91,5 +91,5 @@
     </div>
 
 
-
+</div>
 {% endblock content %}
